# MIPT_physics_processes_modeling

./: CMakeLists.txt  Readme.md
Configs/: Cfg.json
HarmonicSimulator/: StartSim.py  main.cpp  make.py
definitions/: CMakeLists.txt  DiffEquation.cpp  Solver.cpp
include/: DiffEquation.hpp  DrivenForce.hpp  Solver.hpp  SolverWithName.hpp
wk_1/: ex_345.cpp  ex_6.cpp  ex_78.cpp  ex_91011.cpp  print_Nature_Numbers.cpp
wk_2/: README.md  ex1.py  ex2.py  ex3.py  ex4.py
